# eyl-nes-emulator

./: README.md
doc/: .gitignore  apu.tex  cpu.tex  latexmkrc  nes-emulator.tex  ppu.tex
src/: CMakeLists.txt  apu.c  apu.h  args.c  args.h  cartridge.c  cartridge.h  console.c  console.h  controller.c  controller.h  cpu.c  cpu.h  exit_code.c  exit_code.h  main.c  memory_bus.c  memory_bus.h  nes_emulator.c  nes_emulator.h  ppu.c  ppu.h  ppu_register.c  prg_rom.c  prg_rom.h  ram.c  ram.h  utils.c  utils.h  wayland.c  wayland.h  wayland_buffer.c  wayland_buffer.h
src/backend/: alsa.c  alsa.h  evdev.c  evdev.h  wayland.c  wayland.h  wayland_buffer.c  wayland_buffer.h  wayland_ppu.c  wayland_private.h
tests/nestest/: .gitignore  test_nestest.py
tests/nestest/src/: CMakeLists.txt  main.c
tests/ppu/: test_ppu.py
tests/ppu/blargg_ppu_tests/: tests.py
tests/ppu/ppu_vbl_nmi/: tests.py
tests/ppu/sprite_hit_tests/: tests.py
tests/ppu/src/: CMakeLists.txt  main.c
tests/ppu_vbl_nmi/: .gitignore  test_ppu_vbl_nmi.py
tests/ppu_vbl_nmi/src/: 01.c  CMakeLists.txt  main.c
tests/sprite_hit_tests/: test_sprite_hit_tests.py
tests/sprite_hit_tests/src/: CMakeLists.txt
